crates/jolt_java_syntax/tests/snapshots/corpus__syntax__parser__array_creation_unsized_trailing_dims_have_per_dimension_nodes.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
class ArrayCreationPerDimensionDims {
    void method() {
        Object values = new String[1] @A [] @B [];
    }
}

@interface A {}
@interface B {}

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    ClassDeclaration
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Identifier "ArrayCreationPerDimensionDims" @ 6..35 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 36..37
        ClassBodyMemberList
          ClassBodyDeclaration
            MethodDeclaration
              VoidType
                VoidKw "void" @ 42..46 leading=[Newline "\n", Whitespace "    "] trailing=[Whitespace " "]
              Identifier "method" @ 47..53
              LParen "(" @ 53..54
              RParen ")" @ 54..55 trailing=[Whitespace " "]
              Block
                LBrace "{" @ 56..57
                BlockStatementList
                  BlockStatement
                    LocalVariableDeclaration
                      ParameterModifierList
                      ClassType
                        ClassTypeSegmentList
                          ClassTypeSegmentNode
                            AnnotationList
                            Name
                              Identifier "Object" @ 66..72 leading=[Newline "\n", Whitespace "        "] trailing=[Whitespace " "]
                      VariableDeclaratorList
                        VariableDeclarator
                          Identifier "values" @ 73..79 trailing=[Whitespace " "]
                          Assign "=" @ 80..81 trailing=[Whitespace " "]
                          VariableInitializer
                            ArrayCreationExpression
                              NewKw "new" @ 82..85 trailing=[Whitespace " "]
                              ClassType
                                ClassTypeSegmentList
                                  ClassTypeSegmentNode
                                    AnnotationList
                                    Name
                                      Identifier "String" @ 86..92
                              DimExpressionList
                                DimExpression
                                  AnnotationList
                                  LBracket "[" @ 92..93
                                  LiteralExpression
                                    IntegerLiteral "1" @ 93..94
                                  RBracket "]" @ 94..95 trailing=[Whitespace " "]
                              ArrayDimensions
                                ArrayDimension
                                  AnnotationList
                                    Annotation
                                      At "@" @ 96..97
                                      Name
                                        Identifier "A" @ 97..98 trailing=[Whitespace " "]
                                  LBracket "[" @ 99..100
                                  RBracket "]" @ 100..101 trailing=[Whitespace " "]
                                ArrayDimension
                                  AnnotationList
                                    Annotation
                                      At "@" @ 102..103
                                      Name
                                        Identifier "B" @ 103..104 trailing=[Whitespace " "]
                                  LBracket "[" @ 105..106
                                  RBracket "]" @ 106..107
                    Semicolon ";" @ 107..108
                RBrace "}" @ 113..114 leading=[Newline "\n", Whitespace "    "]
        RBrace "}" @ 115..116 leading=[Newline "\n"]
    AnnotationInterfaceDeclaration
      At "@" @ 118..119 leading=[Newline "\n", Newline "\n"]
      InterfaceKw "interface" @ 119..128 trailing=[Whitespace " "]
      Identifier "A" @ 129..130 trailing=[Whitespace " "]
      AnnotationInterfaceBody
        LBrace "{" @ 131..132
        AnnotationElementList
          AnnotationInterfaceBodyMemberList
        RBrace "}" @ 132..133
    AnnotationInterfaceDeclaration
      At "@" @ 134..135 leading=[Newline "\n"]
      InterfaceKw "interface" @ 135..144 trailing=[Whitespace " "]
      Identifier "B" @ 145..146 trailing=[Whitespace " "]
      AnnotationInterfaceBody
        LBrace "{" @ 147..148
        AnnotationElementList
          AnnotationInterfaceBodyMemberList
        RBrace "}" @ 148..149
  Eof "" @ 150..150 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
