crates/jolt_java_syntax/tests/snapshots/corpus__syntax__parser__diagnoses_bare_try_statement.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
class BareTry {
    void method() {
        try {}
    }
}

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    ClassDeclaration
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Identifier "BareTry" @ 6..13 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 14..15
        ClassBodyMemberList
          MethodDeclaration
            VoidType
              VoidKw "void" @ 20..24 leading=[Newline "\n", Whitespace "    "] trailing=[Whitespace " "]
            Identifier "method" @ 25..31
            LParen "(" @ 31..32
            RParen ")" @ 32..33 trailing=[Whitespace " "]
            Block
              LBrace "{" @ 34..35
              BlockStatementList
                BlockStatement
                  TryStatement
                    TryKw "try" @ 44..47 leading=[Newline "\n", Whitespace "        "] trailing=[Whitespace " "]
                    Block
                      LBrace "{" @ 48..49
                      BlockStatementList
                      RBrace "}" @ 49..50
                    CatchClauseList
              RBrace "}" @ 55..56 leading=[Newline "\n", Whitespace "    "]
        RBrace "}" @ 57..58 leading=[Newline "\n"]
  Eof "" @ 59..59 leading=[Newline "\n"]

diagnostics:
  code=java.parse.expected_syntax severity=Error stage=Parser range=55..56 message="expected `catch` or `finally` after try block"

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(55), end: TextSize(56) }) message=expected `catch` or `finally` after try block
